# aerocat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/analysis/: analyze_E_group.py  analyze_a1_critic_variance.py  analyze_a2_cold_start.py  analyze_b1plus_drift_vs_leaveoneout.py  analyze_c1_calibration.py  analyze_c2_conservatism.py  analyze_c2d1_smoke.py  analyze_c3_stochastic.py  analyze_dr_eval.py  analyze_e1_transfer.py  analyze_e2_per_basis.py  analyze_h1_vphys_evolution.py  analyze_h2_action_attribution.py  analyze_h4_naive_predictor.py  analyze_h5_dim_decomposition.py  analyze_h9_vphys_predictor.py  analyze_init_sweep.py  analyze_p0_results.py  analyze_wave.py  extract_d_t1_weights.py
experiments/launchers/: run_dr_eval.sh  run_e1.sh  run_e2.sh  run_h5.sh  run_h8.sh
results/a1_variance/: a1_table.md
results/a2_cold_start/: a2_table.md
results/b1plus_drift_vs_e2/: b1plus_table.md
results/c1_calibration/: c1_table.md
results/c2_conservatism/: c2_table.md
results/c3_stochastic/: c3_table.md
results/e1_transfer/: e1_table.md
results/e2_per_basis/: e2_table.md
results/h1_vphys_evolution/: h1_per_seed_ratios.json  h1_table.md
results/h2_action_attribution/: h2_table.md
results/h4_naive_predictor/: h4_per_cell.json  h4_table.md
results/h5_perdim/: _smoke.json  _smoke2.json  h5_table.md  results.json
results/h8_perdim_t3/: h8_table.md  results.json
results/h9_vphys_predictor/: h9_per_cell.json  h9_table.md
src/aerocat/: __init__.py  config.py
src/aerocat/control/: l1_guidance.py  l3_controller.py
(+31 files in other folders)
